# internal/transactions/application/dtos/input/errors.go
@@ -9,12 +9,10 @@ var (
 	ErrInputPaymentMethodRequired  = errors.New("payment_method: não pode ser vazio")
 	ErrInputOccurredAtRequired     = errors.New("occurred_at: não pode ser vazio")
 	ErrInputStartedAtRequired      = errors.New("started_at: não pode ser vazio")
-	ErrInputPurchasedAtRequired    = errors.New("purchased_at: não pode ser vazio")
 	ErrInputFrequencyRequired      = errors.New("frequency: não pode ser vazio")
 	ErrInputDayOfMonthOutOfRange   = errors.New("day_of_month: deve estar entre 1 e 28")
-	ErrInputInstallmentsOutOfRange = errors.New("installments_total: deve estar entre 1 e 24")
+	ErrInputInstallmentsOutOfRange = errors.New("installments: deve estar entre 1 e 24")
 	ErrInputVersionRequired        = errors.New("version: deve ser maior que zero")
-	ErrInputTotalAmountRequired    = errors.New("total_amount_cents: deve ser maior que zero")
 	ErrInputCategoryIDRequired     = errors.New("category_id: obrigatório")
 	ErrInputCardIDRequired         = errors.New("card_id: obrigatório")
 )
